# pum13-2023

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml  tailwind.config.js
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: lint.yml  main.yml  test.yml
nginx/: Dockerfile  nginx.conf  project.conf
src/calculator/: __init__.py  calculator.py
src/dashboard/: config.py  main.py  utilities.py
src/dashboard/assets/: dashboard.css  font.css  layout.css
src/dashboard/components/: __init__.py  add_dashboard_modal.py  auth.py  button.py  dashboards_list_component.py  experimental_component.py  highlight_item.py  icon.py  list_component.py  modal.py  multiline_input.py  navbar_component.py  test_component.py  text_input.py  trace.py
src/dashboard/models/: data.py  db.py  db_types.py  user.py
src/dashboard/pages/: dashboard.py  dashboards.py  graphs.py  index.py  shared_dashboards.py
src/dashboard/pages/create_graph/: controller.py  create_graph.py  create_test_csv.py
src/dashboard/pages/dashboards/: controller.py  dashboards.py
src/dashboard/pages/graph_of_csv_file/: graph_of_csv.py
src/dashboard/pages/index/: controller.py  index.py
src/dashboard/pages/login/: login_page.py  notes_etc.txt
src/dashboard/tests/: test_generate_navbar_items.py
tests/: README.md  __init__.py  conftest.py  helper_test_functions.py  pytest.ini  requirements.txt  run_test.py  settings.py  test_calculator.py  test_dashboard.py  test_dashboard_page.py  test_dashboards_list_component.py  test_dashboards_page.py  test_data_db.py  test_db.py  test_enum.py  test_generate_navbar_items.py  test_home_page.py  test_list_component.py  test_login.py  test_modal.py  test_navbar_component.py  test_selenium_pytest.py  test_user_db.py  test_utilities.py
tests/resources/: test.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7_short_no_xy.csv
