[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "dash == 2.8.1",
  "pymongo == 4.3.3"
]
name = "pum13-2023"
description = "Data visualization dashboard written with Dash"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[project.optional-dependencies]
dev = [
  "isort == 5.12.0",
  "black == 23.1.0",
  "mypy == 1.0.1",
  "nox == 2022.11.21",
  "pytest == 7.2.1",
  "flake8 == 6.0.0",
  "flake8-bugbear == 23.2.13",
  "flake8-comprehensions == 3.10.1",
  "pep8-naming == 0.13.3",
  "pyproject-flake8 == 6.0.0.post1",
  "pytest-cov == 4.0.0",
  "selenium == 4.8.2",
]

[tool.mypy]
disable_error_code = "misc"
mypy_path = "src/dashboard/"
exclude = "migrations"
strict = true


[[tool.mypy.overrides]]
module = "dash.*"
ignore_missing_imports = true

[tool.flake8]
exclude = "venv,.nox,docs"
extend-ignore = ["E203"]
extend-immutable-calls = ["Argument"]
max-doc-length = 72
max-line-length = 99

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
force_sort_within_sections = true
line_length = 99
profile = "black"
skip_gitignore = true
src_paths = ["src"]
